# rtiroutingservice-plugins

./: .gitignore
plugins/processors/pyprocessor/: .gitignore  CMakeLists.txt  PyInput.cxx  PyInput.hpp  PyLoanedSamples.cxx  PyLoanedSamples.hpp  PyOutput.cxx  PyOutput.hpp  PyProcessor.cxx  PyProcessor.hpp  PyRoute.cxx  PyRoute.hpp  README.rst  RsPyProcessor.xml  conf.py  pyproc.py
plugins/processors/pyprocessor/example/: README.md  RsPyProcessor.xml  RsShapesProcessor.xml  myproc.py  shapes_proc.py
plugins/processors/pyprocessor/rti/routing/: proc.py  service.py
plugins/processors/pyprocessor/src/: NativeUtils.cxx  NativeUtils.h  NativeUtils.hpp  PyDynamicData.cxx  PyDynamicData.hpp  PyInput.cxx  PyInput.hpp  PyLoanedSamples.cxx.old  PyLoanedSamples.hpp.old  PyOutput.cxx  PyOutput.hpp  PyProcessor.cxx  PyProcessor.hpp  PyRoute.cxx  PyRoute.hpp  PySamples.cxx  PySamples.hpp  PyService.cxx  PyServiceGlobals.cxx
plugins/processors/pyprocessor/test/: ComplexType.idl  RsPyTest.xml  pyproctest.py
